--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -7,7 +7,10 @@
     - docker-common
     - container-selinux
     - docker-selinux
+    - docker-engine-selinux
     - docker-engine
+    - docker-ce
+    - docker-ce-selinux
   become: true
   become_user: root
 
@@ -20,8 +23,8 @@
 - name : add stable repository
   yum_repository:
     name: dockerrepo
-    description: docker ce repository
-    baseurl: https://yum.dockerproject.org/repo/main/centos/7/ 
+    description: docker repository
+    baseurl: https://yum.dockerproject.org/repo/main/centos/7/
     enabled: yes
     gpgkey: https://yum.dockerproject.org/gpg
     gpgcheck: yes
