--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
 # server info
 staging
+hosts
+rancher-hosts
 
 # Directories #
 /build/
 /bin/
 target/
-  
+
 # OS Files #
 .DS_Store
-  
+
 *.class
 
 # Package Files #
@@ -16,27 +18,27 @@ target/
 *.war
 *.ear
 *.db
-  
+
 ######################
 # Windows
 ######################
-  
+
 # Windows image file caches
-Thumbs.db 
-  
+Thumbs.db
+
 # Folder config file
 Desktop.ini
 
 ######################
 # OSX
 ######################
-  
+
 .DS_Store
 .svn
 
 # Thumbnails
 ._*
-  
+
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
@@ -44,7 +46,7 @@ Desktop.ini
 ######################
 # Eclipse
 ######################
-  
+
 *.pydevproject
 .project
 .metadata
@@ -62,13 +64,13 @@ local.properties
 /src/main/resources/rebel.xml
 # External tool builders
 .externalToolBuilders/
-  
+
 # Locally stored "Eclipse launch configurations"
 *.launch
-  
+
 # CDT-specific
 .cproject
-  
+
 # PDT-specific
 .buildpath
 
